# RAG_Pipeline_With_Llamaindex

./: .gitignore  pyproject.toml
rag_from_scratch/: similarity_calculator.py
rag_from_scratch/basic_example/: embedding_handler.py  file_parser.py  main.py
